--- a/9day/finished.html
+++ b/9day/finished.html
@@ -18,29 +18,51 @@
     }
 
     // Regular
-
+    console.log('В проекте ClipBoard появилась функция писать разные console.log()');
     // Interpolated
-
+    console.log('bla-bla-%s-bla','xXx');
     // Styled
-
+    console.log('%c Iam some great text','font-size:50px;');
     // warning!
-
+    console.warn('OH NOOO');
     // Error :|
-
+    console.error('Shit')
     // Info
-
-    // Testing
-
+    console.info('aska live')
+    // Testing\
+    const p = document.querySelector('p');
+    console.assert( p.classList.contains('ouch'),'that is wrong!')
     // clearing
-
+    console.clear();
     // Viewing DOM Elements
-
+    console.log(p);
+    console.dir(p);
     // Grouping together
-
+    dogs.forEach(dog=> {
+      //console.groupCollapsed(`${dog.name}`);
+      console.group(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old`);
+      console.log(`${dog.name} is ${dog.age * 7} dog years old`);
+      console.groupEnd(`${dog.name}`);
+    });
     // counting
-
+    console.count('aska');
+    console.count('aska');
+    console.count('aska');
+    console.count('aska');
+    console.count('aska');
+    console.count('aska');
     // timing
-
+    console.time('fetching data');
+    fetch('https://api.github.com/users/nesmark')
+    .then(data => data.json())
+    .then(data => {
+     console.timeEnd('fetching data');
+      console.log(data)
+    });
+    
+    console.table(dogs)
   </script>
 </body>
 </html>
